added get-list method

--- a/uu_todos_maing01-server/app/config/mappings.json
+++ b/uu_todos_maing01-server/app/config/mappings.json
@@ -20,6 +20,11 @@
         "realization": "api/controllers/ListController.create",
         "httpMethod": "POST",
         "type": "CMD"
+      },
+      "list/get": {
+        "realization": "api/controllers/ListController.get",
+        "httpMethod": "GET",
+        "type": "CMD"
       }
     }
   }
