added update list

--- a/uu_todos_maing01-server/app/config/mappings.json
+++ b/uu_todos_maing01-server/app/config/mappings.json
@@ -25,6 +25,11 @@
         "realization": "api/controllers/ListController.get",
         "httpMethod": "GET",
         "type": "CMD"
+      },
+      "list/update": {
+        "realization": "api/controllers/ListController.update",
+        "httpMethod": "POST",
+        "type": "CMD"
       }
     }
   }
