added update and create item

--- a/uu_todos_maing01-server/app/config/mappings.json
+++ b/uu_todos_maing01-server/app/config/mappings.json
@@ -30,6 +30,21 @@
         "realization": "api/controllers/ListController.update",
         "httpMethod": "POST",
         "type": "CMD"
+      },
+      "item/create": {
+        "realization": "api/controllers/ItemController.create",
+        "httpMethod": "POST",
+        "type": "CMD"
+      },
+      "item/get": {
+        "realization": "api/controllers/ItemController.get",
+        "httpMethod": "GET",
+        "type": "CMD"
+      },
+      "item/update": {
+        "realization": "api/controllers/ItemController.update",
+        "httpMethod": "POST",
+        "type": "CMD"
       }
     }
   }
